appId: ${APP_ID}
---
- launchApp:
    clearState: false
    stopApp: true
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: "login-email-field|nav-open-map"
    timeout: 60000
- runFlow:
    when:
      visible:
        id: "login-email-field"
    commands:
      - tapOn:
          id: "login-email-field"
      - eraseText
      - inputText: ${MAESTRO_EMAIL}
      - hideKeyboard
      - tapOn:
          id: "login-password-field"
      - eraseText
      - inputText: ${MAESTRO_PASSWORD}
      - hideKeyboard
      - tapOn:
          text: "ENTER SYSTEM"
- assertNotVisible:
    id: "login-email-field"
