appId: ${APP_ID}
---
- runFlow: ../_common/go_to_smart_planner.yaml
- tapOn:
    id: "smart-planner-context-input"
- eraseText
- hideKeyboard
- tapOn:
    id: "smart-planner-submit"
- assertNotVisible: "Something went wrong"
