appId: ${APP_ID}
---
- runFlow: ../authentication/login_with_env.yaml
- runFlow: ../_common/go_to_smart_planner.yaml
- tapOn:
    id: "smart-planner-context-input"
- inputText: "I need focus today"
- hideKeyboard
- tapOn:
    id: "smart-planner-submit"
- assertVisible:
    text: "SMART INSIGHT"
