appId: ${APP_ID}
---
- runFlow: ../_common/go_to_smart_planner.yaml
- tapOn:
    id: "smart-planner-context-input"
- eraseText
- inputText: "!@#$%^&*()_+ [] {} <> / ? \\ |"
- hideKeyboard
- tapOn:
    id: "smart-planner-submit"
- assertVisible:
    text: "SMART INSIGHT"
