appId: ${APP_ID}
---
- runFlow: paywall_open.yaml
- tapOn:
    text: "Subscription Details"
- assertVisible:
    text: "Plan:"
- stopApp
- launchApp:
    clearState: false
    stopApp: true
- runFlow: ../_common/go_to_settings.yaml
- tapOn:
    text: "Billing Center"
