appId: ${APP_ID}
---
- runFlow: timeline_load.yaml
- tapOn: "Today"
- tapOn: "Week"
- tapOn: "More filters"
- tapOn: "Completed"
- tapOn: "All"
